--- a/shippable.yml
+++ b/shippable.yml
@@ -24,3 +24,8 @@ before_script:
 script:
   - go test -coverprofile=coverage.txt -covermode count ./
   - $GOPATH/bin/gocover-cobertura < coverage.txt > shippable/codecoverage/coverage.xml
+  
+notifications:
+    email:
+        - darshan.zend@gslab.com
+        - dzend@cisco.com
