--- a/shippable.yml
+++ b/shippable.yml
@@ -29,3 +29,15 @@ notifications:
     email:
         - darshan.zend@gslab.com
         - dzend@cisco.com
+        
+# move or copy files to shippable folder
+  before_archive:
+      - ls
+      - mv  sample_go.go  shippable/src
+
+  after_archive:
+    # To get the URL of the api access token
+      - echo $SHIPPABLE_ARTIFACTS_URL
+    # value of the below variable will be true if archive is successful else it will be false.
+      - echo $ARTIFACTS_UPLOAD_SUCCESSFUL
+
